# test-oidc-rs

./: .gitignore  Cargo.toml
crates/druid/: Cargo.toml
crates/druid/src/: main.rs  pkce.rs  table.rs
crates/iced/: Cargo.toml
crates/iced/src/: linux_mode_couleur.rs  main.rs  mode_couleur.rs  nix_mode_couleur.rs  pkce.rs  table.rs  win_mode_couleur.rs  windows_mode_couleur.rs
crates/server/src/: lib.rs  session.rs
crates/tauri/ui/: main.js  userinfos.htm
crates/test-oidc/: Cargo.toml
crates/xilem/: Cargo.toml
crates/xilem/src/: main.rs  pkce.rs  table.rs
druid/: Cargo.toml
druid/src/: main.rs  pkce.rs  seticon.rs  table.rs
druid/src/table/: table.rs
iced/: Cargo.toml
iced/src/: main.rs
server/: Cargo.toml
server/src/: lib.rs  session.rs
src/: main.rs  server.rs
static/: userinfos.htm
test-oidc/: Cargo.toml
test-oidc/src/: main.rs
userinfos/: Cargo.toml
userinfos/src/: listes.rs  main.rs
