[package]
name = "userinfos"
version = "0.1.0"
authors = ["Rrogntudju"]
edition = "2018"
build = "build/build.rs"


[dependencies]
druid = { version = "0.7", features = [ "png", "im" ] }
minreq = { version = "2", features = ["https", "json-using-serde"] }
serde_json = "1"
winapi = { version = "0.3", features = ["winuser", "winnt"] }

[build-dependencies]
winres = "0.1"