[package]
name = "userinfos"
version = "0.1.0"
authors = ["Rrogntudju"]
edition = "2018"
build = "build/build.rs"


[dependencies]
druid = { version = "0.8", features = [ "png", "im" ] }
minreq = { version = "2", features = ["https", "json-using-serde"] }
serde_json = "1"
windows = { version = "0.44", features = ["Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader", "Win32_Foundation"] }

[build-dependencies]
winres = "0.1"