[package]
name = "userinfos"
version = "0.2.0"
authors = ["Rrogntudju"]
edition = "2021"
build = "build/build.rs"


[dependencies]
druid = { version = "0.8", features = [ "png", "im" ] }
serde_json = "1"
windows = { version = "0.44", features = ["Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader", "Win32_Foundation"] }
oauth2 = { version = "4", features = ["reqwest"]}
webbrowser = "0.8"
url = "2"
anyhow = "1"

[build-dependencies]
winres = "0.1"