[package]
name = "userinfos2"
version = "0.2.0"
authors = ["Rrogntudju"]
edition = "2021"


[dependencies]
iced = "0.7"
iced_native = "0.8"
iced_lazy = "0.4"
serde_json = "1"
windows = { version = "0.44", features = ["Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader", "Win32_Foundation"] }
oauth2 = { version = "4", features = ["reqwest"]}
webbrowser = "0.8"
url = "2"
ureq = { version = "2", features = ["json"] }
anyhow = "1"
static_init = "1"
