[package]
name = "server"
version = "0.1.0"
authors = ["Rrogntudju"]
edition = "2021"

[dependencies]
warp = {version = "0.3", features = ["tls"]}
tokio = {version = "1", features = ["macros"]}
oauth2 = { version = "4", default-features = false}
inth-oauth2 = "0.16"
rand = "0.7"
lazy_static = "1"
reqwest = "0.9"
serde_json = "1"