[package]
name = "server"
version = "0.2.0"
authors = ["Rrogntudju"]
edition = "2021"

[dependencies]
warp = {version = "0.3", features = ["tls"]}
tokio = {version = "1", features = ["macros"]}
oauth2 = "4"
rand = "0.8"
lazy_static = "1"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"