[package]
name = "userinfos2"
version = "0.4.0"
authors = ["Rrogntudju"]
edition = "2021"
build = "build/build.rs"

[dependencies]
iced = { version = "0.10", features = ["tokio", "image", "advanced"] }
iced_runtime = "0.1"
iced_core = "0.10"
iced_futures = "0.7"
cosmic-time = { git = "https://github.com/pop-os/cosmic-time", rev = "4013946" }
once_cell = "1"
serde_json = "1"
oauth2 = { version = "4", default-features = false, features = ["ureq"]}
webbrowser = "0.8"
url = "2"
ureq = { version = "2", features = ["json"] }
anyhow = "1"
windows = { version = "0.48", features = ["UI_ViewManagement", "Foundation"] }
tokio = { version = "1", features = [ "sync" ] }

[build-dependencies]
winres = "0.1"