[package]
name = "userinfos2"
version = "0.5.2"
authors = ["Rrogntudju"]
edition = "2021"
build = "build/build.rs"

[dependencies]
iced = { version = "0.13", features = ["tokio", "image", "advanced"] }
iced_runtime = "0.13"
iced_core = "0.13"
iced_futures = "0.13"
cosmic-time = { git = "https://github.com/pop-os/cosmic-time", rev = "5709ea7" }
serde_json = "1"
oauth2 = { version = "4", default-features = false, features = ["ureq"]}
webbrowser = "0.8"
url = "2"
ureq = { version = "2", features = ["json"] }
anyhow = "1"
tokio = { version = "1", features = [ "sync" ] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = ["UI_ViewManagement", "Foundation"] }

[target.'cfg(unix)'.dependencies]
zbus = "3"

[build-dependencies]
winres = "0.1"