[package]
name = "userinfos2"
version = "0.6.0"
authors = ["Rrogntudju"]
edition = "2024"
build = "build/build.rs"

[dependencies]
iced = { version = "0.13", features = ["tokio", "image", "advanced"] }
iced_runtime = "0.13"
iced_core = "0.13"
iced_futures = "0.13"
cosmic-time = { git = "https://github.com/Rrogntudju/cosmic-time.git", branch = "iced0.13" }
serde_json = "1"
oauth2 = { version = "5", default-features = false, features = ["ureq"]}
webbrowser = "1"
url = "2"
ureq = { version = "2", features = ["json"] }
anyhow = "1"
tokio = { version = "1", features = [ "sync" ] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["UI_ViewManagement", "Foundation"] }

[target.'cfg(unix)'.dependencies]
zbus = "5"

[build-dependencies]
winres = "0.1"